# Proyecto-Transformer-TIA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  matrix.cpp  operations.cpp  test.cpp
data/blood/: X_test.npy  y_train.npy
data/processed_images/: 0.npy  0_visual.txt  1.npy  1_visual.txt  2.npy  2_visual.txt  3.npy  3.txt  3_visual.txt  4.npy  4_visual.txt  5.npy  5.txt  5_visual.txt  6.npy  6_visual.txt  7.npy  7_visual.txt  8.npy  8_visual.txt  9.npy  9_visual.txt
src/: layers.cpp  main.cpp  main_layers.cpp  utils.cpp
src/data/: mnist_loader.hpp
src/layers/: feed_forward.cpp  feed_forward.hpp  layer_norm.cpp  layer_norm.hpp  linear.cpp  linear.hpp
src/mnist/: mnist_loader.hpp
src/training/: classification_loss.cpp  classification_loss.hpp
src/transformer/: attention.cpp  attention.hpp  vit_mnist.cpp  vit_mnist.hpp
src/utils/: classifier.cpp  classifier.hpp  image_utils.cpp  image_utils.hpp  matrix.cpp  matrix.hpp  trainer.cpp  trainer.hpp
